fix: table overflow

--- a/src/components/ComponentExample/component-example.scss
+++ b/src/components/ComponentExample/component-example.scss
@@ -62,6 +62,10 @@
   background: $ui-05;
   color: $inverse-01;
   border-bottom: 1px solid $carbon--gray-80;
+  scrollbar-width: 0;
+  @include carbon--breakpoint('md') {
+    overflow-x: auto;
+  }
 }
 
 .component-toolbar__current {
